--- a/Application/EdFi.Ods.SandboxAdmin.Web/packages.config
+++ b/Application/EdFi.Ods.SandboxAdmin.Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Castle.Core" version="4.4.0" targetFramework="net48" />
   <package id="Castle.Windsor" version="5.0.1" targetFramework="net48" />
+  <package id="Dapper" version="2.0.35" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net462" />
   <package id="Hangfire" version="1.7.7" targetFramework="net48" />
