Added defaultPageSize configuration key in configuration file.

--- a/Application/EdFi.Ods.WebApi/Web.Base.config
+++ b/Application/EdFi.Ods.WebApi/Web.Base.config
@@ -29,6 +29,7 @@
     <add key="caching:personUniqueIdToUsi:slidingExpirationSeconds" value="14400" />
     <add key="caching:personUniqueIdToUsi:absoluteExpirationSeconds" value="0" />
     <add key="caching:descriptors:absoluteExpirationSeconds" value="1800" />
+    <add key="defaultPageSize" value="500"/>
     <!-- This only used in Dev environment when the application is running as a .NET Web application. In other environments, it comes from the ServiceConfiguration.cscfg -->
     <add key="Microsoft.ServiceBus.X509RevocationMode" value="NoCheck" />
   </appSettings>
