--- a/Application/EdFi.Ods.SandboxAdmin.Web/Web.Npgsql.config
+++ b/Application/EdFi.Ods.SandboxAdmin.Web/Web.Npgsql.config
@@ -2,20 +2,18 @@
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings xdt:Transform="Replace">
+    <clear />
     <add name="EdFi_Admin"
-         connectionString="Host=localhost; Port=5432; Database=EdFi_Admin; Application Name=EdFi.Ods.SandboxAdmin.Web;"
+         connectionString="Host=localhost; Port=5432; Username=postgres; Database=EdFi_Admin; Application Name=EdFi.Ods.SandboxAdmin.Web;"
          providerName="Npgsql" />
     <add name="EdFi_Security"
-         connectionString="Host=localhost; Port=5432; Database=EdFi_Security; Application Name=EdFi.Ods.SandboxAdmin.Web;"
+         connectionString="Host=localhost; Port=5432; Username=postgres; Database=EdFi_Security; Application Name=EdFi.Ods.SandboxAdmin.Web;"
          providerName="Npgsql" />
     <add name="EdFi_master"
-         connectionString="Host=localhost; Port=5432; Database=master; Application Name=EdFi.Ods.SandboxAdmin.Web;"
+         connectionString="Host=localhost; Port=5432; Username=postgres; Database=postgres; Application Name=EdFi.Ods.SandboxAdmin.Web;"
          providerName="Npgsql" />
     <add name="EdFi_Ods"
-         connectionString="Host=localhost; Port=5432; Database=EdFi_{0}; Application Name=EdFi.Ods.SandboxAdmin.Web;"
-         providerName="Npgsql" />
-    <add name="UniqueIdIntegrationContext"
-         connectionString="Host=localhost; Port=5432; Database=UniqueId; Application Name=EdFi.Ods.SandboxAdmin.Web;"
+         connectionString="Host=localhost; Port=5432; Username=postgres; Database=EdFi_{0}; Application Name=EdFi.Ods.SandboxAdmin.Web;"
          providerName="Npgsql" />
   </connectionStrings>
 
@@ -26,10 +24,12 @@
   </entityFramework>
   <system.data xdt:Transform="InsertAfter(/configuration/entityFramework)">
     <DbProviderFactories>
+      <remove invariant="Npgsql" />
       <add name="Npgsql Data Provider"
            invariant="Npgsql"
            description=".Net Data Provider for PostgreSQL"
-           type="Npgsql.NpgsqlFactory, Npgsql, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
+           type="Npgsql.NpgsqlFactory, Npgsql"
+           support="FF" />
     </DbProviderFactories>
   </system.data>
 </configuration>
