--- a/Application/EdFi.Ods.SandboxAdmin.Web/Web.Base.config
+++ b/Application/EdFi.Ods.SandboxAdmin.Web/Web.Base.config
@@ -43,9 +43,6 @@
     <add name="EdFi_Ods"
          connectionString="Server=(local); Database=EdFi_{0}; Trusted_Connection=True; Application Name=EdFi.Ods.SandboxAdmin.Web;"
          providerName="System.Data.SqlClient" />
-    <add name="UniqueIdIntegrationContext"
-         connectionString="Server=(local); Database=UniqueId; Trusted_Connection=True; Application Name=EdFi.Ods.SandboxAdmin.Web;"
-         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <initialization configSource="AdminCredential.config" />
   <!-- For more information on log4net configuration, visit https://logging.apache.org/log4net/release/manual/configuration.html -->
@@ -63,7 +60,7 @@
       </layout>
     </appender>
     <root>
-      <level value="INFO" />
+      <level value="DEBUG" />
       <appender-ref ref="TraceAppender" />
       <appender-ref ref="FileAppender" />
     </root>
@@ -223,6 +220,30 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" culture="neutral" publicKeyToken="cc7b13ffcd2ddd51" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" culture="neutral" publicKeyToken="b03f5f7f11d50a3a" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" culture="neutral" publicKeyToken="b03f5f7f11d50a3a" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.5.0" newVersion="4.0.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Threading.Tasks.Extensions" culture="neutral" publicKeyToken="cc7b13ffcd2ddd51" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ValueTuple" culture="neutral" publicKeyToken="cc7b13ffcd2ddd51" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Npgsql" culture="neutral" publicKeyToken="5d8b90d52f46fda7" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.3.1" newVersion="4.1.3.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
