--- a/Application/EdFi.Ods.SandboxAdmin.Web/packages.config
+++ b/Application/EdFi.Ods.SandboxAdmin.Web/packages.config
@@ -5,11 +5,24 @@
   <package id="Castle.Windsor" version="5.0.1" targetFramework="net48" />
   <package id="Dapper" version="2.0.35" targetFramework="net48" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
+  <package id="EntityFramework6.Npgsql" version="3.2.1.1" targetFramework="net48" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net462" />
-  <package id="Hangfire" version="1.7.7" targetFramework="net48" />
-  <package id="Hangfire.Core" version="1.7.7" targetFramework="net48" />
-  <package id="Hangfire.SqlServer" version="1.7.7" targetFramework="net48" />
+  <package id="Hangfire" version="1.7.11" targetFramework="net48" />
+  <package id="Hangfire.Core" version="1.7.11" targetFramework="net48" />
+  <package id="Hangfire.PostgreSql" version="1.7.0" targetFramework="net48" />
+  <package id="Hangfire.SqlServer" version="1.7.11" targetFramework="net48" />
   <package id="Hangfire.Windsor" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
+  <package id="Npgsql" version="4.1.3.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="4.6.0" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
