updated postgres transform to fix provisioner

--- a/Application/EdFi.Ods.WebApi/Web.Npgsql.config
+++ b/Application/EdFi.Ods.WebApi/Web.Npgsql.config
@@ -13,6 +13,9 @@
     <add name="EdFi_Security"
          connectionString="Host=localhost; Port=5432; Username=postgres; Database=EdFi_Security; Application Name=EdFi.Ods.WebApi;"
          providerName="Npgsql" />
+    <add name="EdFi_master"
+         connectionString="Host=localhost; Port=5432; Username=postgres; Database=postgres; Application Name=EdFi.Ods.SandboxAdmin.Web;"
+         providerName="Npgsql" />
     <add name="EdFi_Ods"
          connectionString="Host=localhost; Port=5432; Username=postgres; Database=EdFi_{0}; Application Name=EdFi.Ods.WebApi;"
          providerName="Npgsql" />
@@ -47,14 +50,8 @@
     </session-factory>
   </hibernate-configuration>
   <appSettings>
-    <add key="apiStartup:type" value="sharedinstance" xdt:Transform="Replace" xdt:Locator="Match(key)" />
     <add key="databaseTemplate:minimalTemplateScript" value="PostgreSQLMinimalTemplate" xdt:Transform="Replace" xdt:Locator="Match(key)" />
     <add key="databaseTemplate:populatedTemplateScript" value="PostgreSQLPopulatedTemplate" xdt:Transform="Replace" xdt:Locator="Match(key)" />
-    <add key="extensions:featureIsEnabled" value="true" xdt:Transform="Replace" xdt:Locator="Match(key)" />
-    <add key="composites:featureIsEnabled" value="false" xdt:Transform="Replace" xdt:Locator="Match(key)" />
-    <add key="profiles:featureIsEnabled" value="false" xdt:Transform="Replace" xdt:Locator="Match(key)" />
-    <add key="identityManagement:featureIsEnabled" value="false" xdt:Transform="Replace" xdt:Locator="Match(key)" />
-    <add key="ownershipBasedAuthorization:featureIsEnabled" value="false" xdt:Transform="Replace" xdt:Locator="Match(key)" />            
     <add key="Microsoft.ServiceBus.X509RevocationMode" xdt:Transform="Remove" xdt:Locator="Match(key)" />
   </appSettings>
 </configuration>
